# downstat

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/: error.rs  http.rs  lib.rs  main.rs  model.rs  output.rs  registries.rs  schema.rs
tests/: behavior.rs  cli.rs  conformance.rs  network.rs
